feat: set jwt token generator

--- a/BuberDinner.Api/BuberDinner.Api.csproj
+++ b/BuberDinner.Api/BuberDinner.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>b76b6244-ac9c-4d21-bca0-45423dc15103</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
